# tesys-tagboard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  all-changes.diff  changes.diff  diff_output.txt  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  justfile  launch_prod_demo.sh  manage.py  merge_production_dotenvs_in_dotenv.py  pyproject.toml
.envs/.local/: .django  .django.example  .postgres.example
.envs/.production/: .django.example  .postgres.example
.github/workflows/: ci.yml
compose/local/django/: Dockerfile
compose/local/docs/: Dockerfile
compose/production/django/: Dockerfile  start
compose/production/nginx/: default.conf
config/: urls.py
config/settings/: base.py  docs.py  local.py  production.py  test.py
docs/: Makefile  conf.py
docs/_source/: DEPLOYMENT.md  DEVELOPMENT.md  SETTINGS.md  architecture.rst  conf.py  deployment.rst  development.rst  documentation.rst  faq.rst  index.rst  settings.rst
docs/_source/architecture/: backend.rst  frontend.rst  index.rst
docs/_source/configuration/: email.rst  index.rst  settings.rst
docs/_source/contributing/: development.rst  index.rst  localization.rst
locale/de_DE/LC_MESSAGES/: django.po
locale/en_US/LC_MESSAGES/: django.po
locale/es_MX/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
tests/: test_merge_production_dotenvs_in_dotenv.py
tesys_tagboard/: admin.py  api.py  conftest.py  context_processors.py  decorators.py  enums.py  forms.py  home.md  models.py  search.py  upload.py  validators.py  views.py
tesys_tagboard/components/add_tagset/: add_tagset.html  add_tagset.js  add_tagset.py
tesys_tagboard/components/collection_picker/: collection_picker.html  collection_picker.py
tesys_tagboard/components/collection_thumbnail/: collection_thumbnail.html  collection_thumbnail.py
tesys_tagboard/components/comment/: comment.html  comment.js  comment.py
tesys_tagboard/components/counter/: counter.html  counter.py
tesys_tagboard/components/create_collection/: create_collection.html  create_collection.py
tesys_tagboard/components/create_tag/: create_tag.html  create_tag.py
tesys_tagboard/components/create_tag_alias/: create_tag_alias.html  create_tag_alias.py
tesys_tagboard/components/favorite_toggle/: favorite_toggle.html  favorite_toggle.py
tesys_tagboard/components/modal_form/: modal_form.html  modal_form.py
tesys_tagboard/components/pager/: pager.html  pager.py
tesys_tagboard/components/pager_button/: pager_button.html  pager_button.py
tesys_tagboard/components/post_gallery/: post_gallery.html  post_gallery.py
tesys_tagboard/components/post_thumbnail/: post_thumbnail.html  post_thumbnail.js  post_thumbnail.py
tesys_tagboard/components/search_bar/: search_bar.html  search_bar.js  search_bar.py
tesys_tagboard/components/tag/: tag.html  tag.js  tag.py
tesys_tagboard/components/tag_search/: tag_search.html  tag_search.py
tesys_tagboard/components/text_field_edit_toggle/: text_field_edit_toggle.html  text_field_edit_toggle.js  text_field_edit_toggle.py
tesys_tagboard/components/theme_picker/: theme_picker.html  theme_picker.js  theme_picker.py
tesys_tagboard/fixtures/: README.md  demo.json  tags_and_users.json
tesys_tagboard/management/commands/: congen.py
tesys_tagboard/migrations/: 0001_initial.py  0002_add_initial_data.py  0002_add_moderator_auth_group.py  0002_initial_data.py  0003_alter_artist_options_alter_audio_options_and_more.py  0003_alter_image_thumbnail.py  0003_audio_md5_image_md5_video_md5.py  0003_initial_2.py  0004_audio_mimetype_image_mimetype_video_mimetype.py  0004_mediametadata_alter_post_post_date_mediaaudio_and_more_squashed_0007_alter_mediametadata_source.py  0004_post_parent.py  0005_alter_post_managers_alter_post_type.py  0005_remove_post_upload_date.py  0006_alter_comment_options.py  0006_alter_tag_managers.py  0007_alter_favorite_managers.py  0007_alter_post_type_audio_audio_md5_idx_and_more.py  0008_alter_collection_options.py  0008_alter_tagalias_managers.py  0008_rename_mediaaudio_audio_rename_mediaimage_image_and_more.py  0009_alter_post_rating_level_alter_tag_category_and_more.py  0009_tagcategory_remove_tag_tag_category_idx_and_more.py  0010_add_default_tag_categories.py  0010_init_data.py  0010_remove_tag_unique_tag_name_cat_and_more.py  0011_alter_tagcategory_dark_bg_alter_tagcategory_dark_fg_and_more.py  0011_alter_tagcategory_name.py  0012_alter_collection_desc_alter_collection_name.py  0012_alter_media_type_delete_mediatype.py  0012_alter_tagcategory_bg_alter_tagcategory_fg.py  0013_alter_tagcategory_bg_alter_tagcategory_fg.py  0013_tag_description_alter_artist_bio_alter_media_src_url.py  0014_alter_tagalias_options.py  0014_defaultposttag.py  0015_alter_tag_name_alter_tagalias_name.py  0016_alter_tag_name_alter_tagalias_name.py  0016_tag_post_count.py  0017_alter_collection_name.py  0018_alter_tagcategory_options_and_more_updated.py  0019_post_title.py  (+8 more)
tesys_tagboard/static/js/: post.js  posts.js  project.js
tesys_tagboard/templates/: 500.html  base.html  heading.html
tesys_tagboard/templates/account/: base_confirm_code.html  base_reauthenticate.html  confirm_email_verification_code.html  confirm_login_code.html  confirm_password_reset_code.html  confirm_phone_verification_code.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  reauthenticate.html  request_login_code.html  signup.html
tesys_tagboard/templates/buttons/: modal_form_create.html  modal_form_delete.html  modal_form_edit.html
tesys_tagboard/templates/collections/: picker_item.html
tesys_tagboard/templatetags/: custom_filters.py  custom_tags.py
tesys_tagboard/tests/: factories.py  test_forms.py  test_models.py  test_search.py  test_validators.py  test_views.py
tesys_tagboard/theme/: apps.py
tesys_tagboard/users/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
(+146 files in other folders)
